--- a/frontend_apps/cycdataframe/package.json
+++ b/frontend_apps/cycdataframe/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^0.19.3",
+    "@codemirror/basic-setup": "^0.19.0",
+    "@codemirror/language": "^0.19.3",
+    "@codemirror/lint": "^0.19.2",
+    "@codemirror/state": "^0.19.2",
+    "@codemirror/theme-one-dark": "^0.19.0",
+    "@codemirror/view": "0.19.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.2",
+    "@uiw/react-codemirror": "^4.0.7",
     "ace-builds": "^1.4.13",
+    "codemirror-languageserver": "file:manually-installed-packages/codemirror-languageserver",
     "material-ui": "^0.20.2",
     "next": "11.1.2",
     "polished": "^4.1.3",
@@ -34,6 +43,8 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@codemirror/lang-python": "^0.19.2",
+    "@types/ace": "^0.0.47",
     "@types/react": "17.0.27",
     "@types/react-helmet": "^6.1.3",
     "@types/styled-components": "^5.1.14",
