--- a/frontend_apps/cycdataframe/package.json
+++ b/frontend_apps/cycdataframe/package.json
@@ -51,6 +51,8 @@
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "plotly.js": "^2.5.1",
+    "react-plotly.js": "^2.5.1",
     "recompose": "^0.30.0",
     "typescript": "4.4.3"
   }
