--- a/cyc-next-app/server/package.json
+++ b/cyc-next-app/server/package.json
@@ -10,6 +10,8 @@
     "express": "^4.17.1",
     "python-shell": "^3.0.1",
     "socket.io": "^4.2.0",
-    "socket.io-client": "^4.2.0"
+    "socket.io-client": "^4.2.0",
+    "yaml": "^1.10.2",
+    "zeromq": "^5.2.8"
   }
 }
