--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -27,6 +27,7 @@
     "codemirror-languageserver": "file:manually-installed-packages/codemirror-languageserver",
     "material-ui": "^0.20.2",
     "next": "11.1.2",
+    "node-gyp-build": "^4.3.0",
     "polished": "^4.1.3",
     "python-shell": "^3.0.0",
     "react": "17.0.2",
