--- a/cyc-next-app/server/config.yaml
+++ b/cyc-next-app/server/config.yaml
@@ -2,5 +2,6 @@ node_py_zmq:
   host: tcp://127.0.0.1
   n2p_port: 5000
   p2n_port: 5001
+  p2n_notif_port: 5002
 
 path_to_cycdataframe_lib: '../../../'
