--- a/cyc-next-app/server/package.json
+++ b/cyc-next-app/server/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "node-addon-api": "^4.2.0",
+    "node-gyp-build": "^4.3.0",
     "python-shell": "^3.0.1",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
     "yaml": "^1.10.2",
-    "zeromq": "^5.2.8"
+    "zeromq": "file:../../../zeromq.js"
   }
 }
