--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^7.2.5",
     "react-scroll-to-bottom": "^4.1.2",
     "react-split-pane": "^0.1.92",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1"
@@ -52,6 +53,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "plotly.js": "^2.5.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-plotly.js": "^2.5.1",
     "recompose": "^0.30.0",
     "typescript": "4.4.3"
