--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@uiw/react-codemirror": "^4.0.7",
     "ace-builds": "^1.4.13",
+    "animate.css": "^4.1.1",
     "codemirror-languageserver": "file:manually-installed-packages/codemirror-languageserver",
     "material-ui": "^0.20.2",
     "next": "11.1.2",
@@ -38,6 +39,7 @@
     "react-redux": "^7.2.5",
     "react-scroll-to-bottom": "^4.1.2",
     "react-split-pane": "^0.1.92",
+    "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "socket.io-client": "^4.2.0",
