--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -42,6 +42,7 @@
     "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
+    "shortid": "^2.2.16",
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1"
   },
