--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -37,6 +37,7 @@
     "react-helmet": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.5",
+    "react-scroll-into-view-if-needed": "^3.0.1",
     "react-scroll-to-bottom": "^4.1.2",
     "react-split-pane": "^0.1.92",
     "react-toastify": "^8.0.3",
