--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@codemirror/autocomplete": "^0.19.3",
     "@codemirror/basic-setup": "^0.19.0",
+    "@codemirror/lang-python": "^0.19.2",
     "@codemirror/language": "^0.19.3",
     "@codemirror/lint": "^0.19.2",
     "@codemirror/state": "^0.19.2",
@@ -18,6 +19,7 @@
     "@codemirror/view": "0.19.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@lezer/python": "^0.15.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
@@ -48,7 +50,6 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@codemirror/lang-python": "^0.19.2",
     "@types/ace": "^0.0.47",
     "@types/react": "17.0.27",
     "@types/react-helmet": "^6.1.3",
