--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -50,6 +50,7 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@lezer/generator": "^0.15.2",
     "@types/ace": "^0.0.47",
     "@types/react": "17.0.27",
     "@types/react-helmet": "^6.1.3",
