--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -21,13 +21,15 @@
     "@emotion/styled": "^11.3.0",
     "@lezer/python": "^0.15.0",
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
+    "@open-rpc/client-js": "^1.6.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@uiw/react-codemirror": "^4.0.7",
     "ace-builds": "^1.4.13",
     "animate.css": "^4.1.1",
-    "codemirror-languageserver": "file:manually-installed-packages/codemirror-languageserver",
+    "inline-style-prefixer": "^4.0.0",
     "material-ui": "^0.20.2",
     "next": "11.1.2",
     "polished": "^4.1.3",
@@ -41,17 +43,19 @@
     "react-redux": "^7.2.5",
     "react-scroll-into-view-if-needed": "^3.0.1",
     "react-scroll-to-bottom": "^4.1.2",
-    "react-split-pane": "^0.1.92",
+    "react-split-pane-v2": "^1.0.3",
     "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.2.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "vscode-languageserver-protocol": "^3.16.0"
   },
   "devDependencies": {
     "@lezer/generator": "^0.15.2",
     "@types/ace": "^0.0.47",
+    "@types/inline-style-prefixer": "^5.0.0",
     "@types/react": "17.0.27",
     "@types/react-helmet": "^6.1.3",
     "@types/styled-components": "^5.1.14",
