--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -31,6 +31,7 @@
     "animate.css": "^4.1.1",
     "inline-style-prefixer": "^4.0.0",
     "material-ui": "^0.20.2",
+    "moment-timezone": "^0.5.34",
     "next": "11.1.2",
     "polished": "^4.1.3",
     "python-shell": "^3.0.0",
@@ -39,7 +40,10 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
+    "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-query": "^3.34.7",
+    "react-query-devtools": "^3.0.0-beta.1",
     "react-redux": "^7.2.5",
     "react-scroll-into-view-if-needed": "^3.0.1",
     "react-scroll-to-bottom": "^4.1.2",
