--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -39,6 +39,7 @@
     "react-ace": "^9.4.4",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-grid-layout": "^1.3.1",
     "react-helmet": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "^1.5.8",
