--- a/cyc-next-app/server/package.json
+++ b/cyc-next-app/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "node-addon-api": "^4.2.0",
     "node-gyp-build": "^4.3.0",
