--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ Thumbs.db
 
 .next/
 package-lock.json
+
+cyc-next-app/package-lock.json
+cyc-next-app/*/package-lock.json
+cyc-next-app/server/*.yaml
+cyc-next-app/server.log
