--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -63,6 +63,7 @@
     "@types/inline-style-prefixer": "^5.0.0",
     "@types/react": "17.0.27",
     "@types/react-helmet": "^6.1.3",
+    "@types/shortid": "0.0.29",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
