--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -62,6 +62,7 @@
     "@types/ace": "^0.0.47",
     "@types/inline-style-prefixer": "^5.0.0",
     "@types/react": "17.0.27",
+    "@types/react-grid-layout": "^1.3.1",
     "@types/react-helmet": "^6.1.3",
     "@types/shortid": "0.0.29",
     "@types/styled-components": "^5.1.14",
