fix some err and format

--- a/cyc-next-app/server/.env
+++ b/cyc-next-app/server/.env
@@ -1,1 +1,1 @@
-PYTHON_PATH = C:\Users\HoaTV\anaconda3\envs\py39
+PYTHONPATH = /Users/bachbui/miniforge3-m1/envs/py39-m1/bin/python:/Users/bachbui/works/cycai/
