--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -65,6 +65,8 @@
     "@types/react": "17.0.27",
     "@types/react-grid-layout": "^1.3.1",
     "@types/react-helmet": "^6.1.3",
+    "@types/react-plotly.js": "^2.5.0",
+    "@types/react-scroll-into-view-if-needed": "^2.1.1",
     "@types/shortid": "0.0.29",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-styled-components": "^1.13.2",
