--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -31,6 +31,7 @@
     "ace-builds": "^1.4.13",
     "animate.css": "^4.1.1",
     "ansi-to-react": "^6.1.6",
+    "html-react-parser": "^1.4.8",
     "inline-style-prefixer": "^4.0.0",
     "material-ui": "^0.20.2",
     "moment-timezone": "^0.5.34",
@@ -43,6 +44,7 @@
     "react-feather": "^2.0.9",
     "react-grid-layout": "^1.3.1",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-query": "^3.34.7",
