--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -8,7 +8,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "cypress": "cypress open"
+        "cypress": "cypress open",
+        "test": "jest --watch"
     },
     "dependencies": {
         "@codemirror/autocomplete": "^0.19.3",
@@ -64,6 +65,8 @@
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.3",
         "@types/ace": "^0.0.47",
         "@types/inline-style-prefixer": "^5.0.0",
         "@types/react": "17.0.27",
@@ -77,6 +80,7 @@
         "cypress": "^9.5.1",
         "eslint": "7.32.0",
         "eslint-config-next": "11.1.2",
+        "jest": "^27.5.1",
         "plotly.js": "^2.5.1",
         "react-addons-css-transition-group": "^15.6.2",
         "react-plotly.js": "^2.5.1",
