--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -9,7 +9,7 @@
         "start": "next start",
         "lint": "next lint",
         "cypress": "cypress open",
-        "test": "jest --watch"
+        "test": "jest config ./jest.config.js --watch"
     },
     "dependencies": {
         "@codemirror/autocomplete": "^0.19.3",
@@ -66,7 +66,7 @@
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
         "@testing-library/jest-dom": "^5.16.2",
-        "@testing-library/react": "^12.1.3",
+        "@testing-library/react": "^12.1.4",
         "@types/ace": "^0.0.47",
         "@types/inline-style-prefixer": "^5.0.0",
         "@types/react": "17.0.27",
@@ -76,11 +76,14 @@
         "@types/react-scroll-into-view-if-needed": "^2.1.1",
         "@types/shortid": "0.0.29",
         "@types/styled-components": "^5.1.14",
+        "babel-jest": "^27.5.1",
         "babel-plugin-styled-components": "^1.13.2",
         "cypress": "^9.5.1",
         "eslint": "7.32.0",
         "eslint-config-next": "11.1.2",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
+        "jest-css-modules": "^2.1.0",
         "plotly.js": "^2.5.1",
         "react-addons-css-transition-group": "^15.6.2",
         "react-plotly.js": "^2.5.1",
