--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -20,6 +20,9 @@
     "@codemirror/view": "0.19.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@jupyter-widgets/base": "^6.0.0-rc.0",
+    "@jupyter-widgets/controls": "^5.0.0-rc.0",
+    "@jupyter-widgets/html-manager": "^1.0.0-rc.0",
     "@lezer/python": "^0.15.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.60",
@@ -33,6 +36,7 @@
     "ansi-to-react": "^6.1.6",
     "html-react-parser": "^1.4.8",
     "inline-style-prefixer": "^4.0.0",
+    "leaflet": "^1.7.1",
     "material-ui": "^0.20.2",
     "moment-timezone": "^0.5.34",
     "next": "11.1.2",
@@ -45,6 +49,7 @@
     "react-grid-layout": "^1.3.1",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
+    "react-leaflet": "^3.2.5",
     "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-query": "^3.34.7",
@@ -65,6 +70,7 @@
     "@lezer/generator": "^0.15.2",
     "@types/ace": "^0.0.47",
     "@types/inline-style-prefixer": "^5.0.0",
+    "@types/leaflet": "^1.7.9",
     "@types/react": "17.0.27",
     "@types/react-grid-layout": "^1.3.1",
     "@types/react-helmet": "^6.1.3",
