--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -21,7 +21,12 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
+    "@jupyterlab/outputarea": "^3.3.2",
+    "@jupyterlab/rendermime": "^3.3.2",
     "@lezer/python": "^0.15.0",
+    "@lumino/coreutils": "^1.12.0",
+    "@lumino/messaging": "^1.10.1",
+    "@lumino/widgets": "^1.31.1",
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.0.2",
@@ -32,8 +37,10 @@
     "ace-builds": "^1.4.13",
     "animate.css": "^4.1.1",
     "ansi-to-react": "^6.1.6",
+    "backbone": "^1.4.1",
     "html-react-parser": "^1.4.8",
     "inline-style-prefixer": "^4.0.0",
+    "jquery-ui": "^1.13.1",
     "material-ui": "^0.20.2",
     "moment-timezone": "^0.5.34",
     "next": "11.1.2",
