--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -61,7 +61,8 @@
         "shortid": "^2.2.16",
         "socket.io-client": "^4.2.0",
         "styled-components": "^5.3.1",
-        "vscode-languageserver-protocol": "^3.16.0"
+        "vscode-languageserver-protocol": "^3.16.0",
+        "typescript": "4.4.3"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
@@ -87,7 +88,6 @@
         "plotly.js": "^2.5.1",
         "react-addons-css-transition-group": "^15.6.2",
         "react-plotly.js": "^2.5.1",
-        "recompose": "^0.30.0",
-        "typescript": "4.4.3"
+        "recompose": "^0.30.0"
     }
 }
