--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -61,8 +61,8 @@
         "shortid": "^2.2.16",
         "socket.io-client": "^4.2.0",
         "styled-components": "^5.3.1",
-        "vscode-languageserver-protocol": "^3.16.0",
-        "typescript": "4.4.3"
+        "typescript": "^4.4.3",
+        "vscode-languageserver-protocol": "^3.16.0"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
