complete docker image

--- a/cyc-next-app/server/Dockerfile
+++ b/cyc-next-app/server/Dockerfile
@@ -17,7 +17,7 @@
 
 # #CONDA
 FROM continuumio/anaconda3
-
+ENV PORT 80
 WORKDIR /app
 COPY . .
 
@@ -27,12 +27,17 @@ RUN conda install -c conda-forge nodejs
 RUN conda install -c conda-forge/label/gcc7 nodejs
 RUN conda install -c conda-forge/label/cf201901 nodejs
 RUN conda install -c conda-forge/label/cf202003 nodejs
+
+# Install git
+RUN conda install -c anaconda git
+RUN git clone https://kiwing:QTmTLMdSUT3HPSEQpe7N@bitbucket.org/robotdreamers/cycdataframe.git
+RUN git clone https://kiwing:QTmTLMdSUT3HPSEQpe7N@bitbucket.org/robotdreamers/cnext_sample_projects.git
+
 RUN npm install
 
 # Activate conda environment
 ENV PATH /opt/conda/envs/py39/bin:$PATH
 RUN /bin/bash -c "source activate py39"
-# RUN conda install -c conda-forge nodejs
 # Run python script
 CMD ["npm", "start"]
 # Run python script 
