--- a/cyc-next-app/Dockerfile
+++ b/cyc-next-app/Dockerfile
@@ -3,9 +3,9 @@ FROM node:16.13.1
 ENV NODE_ENV=production
 ENV PORT 80
 
-WORKDIR /app
+WORKDIR /web
 
-COPY . /app
+COPY . /web
 
 RUN npm i --force
 RUN npm run build
