--- a/cyc-next-app/docker-compose.yml
+++ b/cyc-next-app/docker-compose.yml
@@ -1,6 +1,15 @@
-version: '1'
+version: '3.9'
 
 services:
+    server:
+        build:
+            context: /server
+            dockerfile: Dockerfile
+        container_name: server
+        working_dir: /server
+        ports:
+            - '4000:80'
+
     web:
         build:
             context: .
@@ -8,12 +17,17 @@ services:
         container_name: web
         ports:
             - '3000:80'
+        depends_on:
+            - server
 
-    server:
-        build:
-            context: /server
-            dockerfile: Dockerfile
-        container_name: server
-        ports:
-            - '4000:80'
-
+    cypress:
+        image: 'cypress/included:9.5.2'
+        container_name: cypress
+        depends_on:
+            - web
+        environment:
+            - CYPRESS_baseUrl=http://web:80
+            - CYPRESS_VIDEO=false
+        working_dir: /cypress
+        volumes:
+            - ./:/cypress
