--- a/cyc-next-app/cypress/Dockerfile
+++ b/cyc-next-app/cypress/Dockerfile
@@ -1,11 +1,12 @@
 FROM cypress/included:9.5.2
 
 ENV CYPRESS_VIDEO=false
+ENV CYPRESS_baseUrl=http://web:80
 
-WORKDIR /app
+WORKDIR /cypress
 
-COPY ./cypress /cypress
-COPY ./cypress.json ./cypress.json
+COPY . /cypress
+# COPY ./cypress.json ./cypress.json
 
 RUN npx cypress run --headless --browser chrome
 
