sync lastest docker

--- a/cyc-next-app/Dockerfile
+++ b/cyc-next-app/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:16.13.1
 
 ENV NODE_ENV=production
-ENV PORT 80
 
 WORKDIR /web
 
@@ -11,3 +10,5 @@ RUN npm i --force
 RUN npm run build
 
 CMD ["npm", "start"]
+
+EXPOSE 3000
