--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -8,7 +8,6 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "cypress": "cypress open",
         "test": "jest config ./jest.config.js --watch"
     },
     "dependencies": {
@@ -69,8 +68,7 @@
         "styled-components": "^5.3.1",
         "vscode-languageserver-protocol": "^3.16.0",
         "react-plotly.js": "^2.5.1",
-        "typescript": "4.4.3",
-        "cypress": "^9.5.1"
+        "typescript": "4.4.3"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
