--- a/cyc-next-app/e2e/package.json
+++ b/cyc-next-app/e2e/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "private": true,
   "devDependencies": {
-    "cypress": "9.5.3"
+    "cypress": "9.5.3",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
