change some config for dev and deploy

--- a/cyc-next-app/docker-compose.yml
+++ b/cyc-next-app/docker-compose.yml
@@ -22,6 +22,9 @@ services:
             - server
         ports:
             - 3000:3000
+        environment:
+            - CODE_SERVER_SOCKET_ENDPOINT = http://server:4000
+
 
     cypress:
         image: cypress
