--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,3 +11,5 @@ pipelines:
               name: 'Build and Test'
               script:
                   - echo "Your build and test goes here..."
+                  - docker compose up --force-recreate --build
+
