--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,10 @@
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
 
-image: atlassian/default-image:3
+image: docker:stable
+
+options:
+    docker: true
 
 pipelines:
     default:
@@ -11,10 +14,4 @@ pipelines:
               name: 'Build and Test'
               script:
                   - echo "Your build and test goes here..."
-                  - export DOCKER_COMPOSE_VERSION=2.3.4
-                  - export DOCKER_COMPOSE_URL=https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)
-                  - curl -L $DOCKER_COMPOSE_URL > docker-compose
-                  - chmod +x docker-compose
-                  - mv docker-compose /usr/local/bin
-                  - docker-compose build --force-rm --no-cache --pull
                   - docker compose up --force-recreate --build
