--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,4 +14,5 @@ pipelines:
               name: 'Build and Test'
               script:
                   - echo "Your build and test goes here..."
-                  - docker compose up --force-recreate --build
+                  - docker compose up 
+                  - docker compose down
