--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,6 @@ pipelines:
               name: 'Build and Test'
               script:
                   - echo "Your build and test goes here..."
-                  - docker compose up 
-                  - docker compose down
+                  - docker-compose up 
+                  - docker-compose down
+                  - docker --help
