--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,6 +7,7 @@ image: docker/compose
 
 options:
     docker: true
+    size: 2x
 
 pipelines:
     default:
@@ -18,3 +19,10 @@ pipelines:
                   - docker-compose up
                   - docker-compose down
                   - docker --help
+              services:
+                  - docker
+
+definitions:
+    services:
+        docker:
+            memory: 4096
