--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,18 +11,30 @@ options:
     max-time: 20
 
 pipelines:
-    pull-requests:
-        master: #this runs as default for any branch not elsewhere defined
-            - step:
-                  size: 2x
-                  name: 'Build and Test'
-                  script:
-                      - echo "Your build and test goes here..."
-                      - docker-compose up
-                      - docker-compose down
-                      - docker --help
-                  services:
-                      - docker
+    # pull-requests:
+    #     master: #this runs as default for any branch not elsewhere defined
+    #         - step:
+    #               size: 2x
+    #               name: 'Build and Test'
+    #               script:
+    #                   - echo "Your build and test goes here..."
+    #                   - docker-compose up
+    #                   - docker-compose down
+    #                   - docker --help
+    #               services:
+    #                   - docker
+
+    default: #this runs as default for any branch not elsewhere defined
+        - step:
+              size: 2x
+              name: 'Build and Test'
+              script:
+                  - echo "Your build and test goes here..."
+                  - docker-compose up
+                  - docker-compose down
+                  - docker --help
+              services:
+                  - docker
 
 definitions:
     services:
