--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,23 +8,9 @@ image: docker/compose
 options:
     docker: true
     size: 2x
-    max-time: 20
 
 pipelines:
-    # pull-requests:
-    #     master: #this runs as default for any branch not elsewhere defined
-    #         - step:
-    #               size: 2x
-    #               name: 'Build and Test'
-    #               script:
-    #                   - echo "Your build and test goes here..."
-    #                   - docker-compose up
-    #                   - docker-compose down
-    #                   - docker --help
-    #               services:
-    #                   - docker
-
-    default: #this runs as default for any branch not elsewhere defined
+    default:
         - step:
               size: 2x
               name: 'Build and Test'
