--- a/cyc-next-app/package.json
+++ b/cyc-next-app/package.json
@@ -52,8 +52,10 @@
         "react-grid-layout": "^1.3.1",
         "react-helmet": "^6.1.0",
         "react-html-parser": "^2.0.2",
+        "react-is": "^18.0.0",
         "react-moment": "^1.1.1",
         "react-perfect-scrollbar": "^1.5.8",
+        "react-plotly.js": "^2.5.1",
         "react-query": "^3.34.7",
         "react-query-devtools": "^3.0.0-beta.1",
         "react-redux": "^7.2.5",
@@ -66,9 +68,8 @@
         "shortid": "^2.2.16",
         "socket.io-client": "^4.2.0",
         "styled-components": "^5.3.1",
-        "vscode-languageserver-protocol": "^3.16.0",
-        "react-plotly.js": "^2.5.1",
-        "typescript": "4.4.3"
+        "typescript": "4.4.3",
+        "vscode-languageserver-protocol": "^3.16.0"
     },
     "devDependencies": {
         "@lezer/generator": "^0.15.2",
@@ -77,7 +78,6 @@
         "@types/react": "17.0.27",
         "@types/react-grid-layout": "^1.3.1",
         "@types/react-helmet": "^6.1.3",
-        "@types/react-plotly.js": "^2.5.0",
         "@types/react-scroll-into-view-if-needed": "^2.1.1",
         "@types/shortid": "0.0.29",
         "@types/styled-components": "^5.1.14",
