--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,6 @@ Thumbs.db
 .next/
 
 package-lock.json
-# cyc-next-app/package-lock.json
-# cyc-next-app/server/package-lock.json
-# cyc-next-app/server/*.yaml
+cyc-next-app/package-lock.json
+cyc-next-app/server/package-lock.json
+cyc-next-app/server/.server.yaml
