--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-CYC_NEXT_IMAGE_VERSION = v1.0.0
-
+IMAGE_NAME = hoatv5/cyc-ai
+IMAGE_TAG = v1.0.0
 CLIENT_PORT = 3000
 SERVER_PORT = 4000
-
 SOURCE_PROJECT_DIR = c:/Users/HoaTV/cnext_sample_projects
