update instruction docker

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ IMAGE_NAME = cycai/cnext
 IMAGE_TAG = v0.1.0
 CLIENT_PORT = 3000
 SERVER_PORT = 4000
-SOURCE_PROJECT_DIR = c:/Users/HoaTV/cnext_sample_projects
+SOURCE_PROJECT_DIR = ${%cd%}/Skywalker
