update instruction and version for docker

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 IMAGE_NAME = cycai/cnext
-IMAGE_TAG = v0.1.0
+IMAGE_TAG = latest
 CLIENT_PORT = 3000
 SERVER_PORT = 4000
 SOURCE_PROJECT_DIR = ./Skywalker
