--- a/cyc_next_app/server/Pipfile
+++ b/cyc_next_app/server/Pipfile
@@ -14,7 +14,7 @@ jupyter-client = "7.2.2"
 jupyterlab = "3.3.4"
 tensorflow = "2.8.0"
 matplotlib = "3.5.1"
-pandas = "==1.3.5"
+pandas = "1.3.5"
 multipledispatch = "0.6.0"
 windows-curses = "2.3.0"
 python-language-server = "0.36.2"
