--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -17,7 +17,7 @@ projects:
 #     n2p_port: 5000
 #     p2n_port: 5001
 
-# path_to_cycdataframe_lib: 'D:/DEV/CycAI/'
+# path_to_cycdataframe_lib: 'D:/DEV/CycAI/cycdataframe'
 
 # projects:
 #     open_projects:
