--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -33,7 +33,7 @@
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
         "@types/react-plotly.js": "^2.5.0",
-        "@uiw/react-codemirror": "^4.0.7",
+        "@uiw/react-codemirror": "~4.6.0",
         "ace-builds": "^1.4.13",
         "animate.css": "^4.1.1",
         "ansi-to-react": "^6.1.6",
