update package json

--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "cycdataframe",
-    "version": "0.1.0",
+    "name": "cycnext",
+    "version": "0.3.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
