--- a/cyc_next_app/server/package.json
+++ b/cyc_next_app/server/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "server",
-    "version": "0.1.0",
+    "name": "cyc-cnext-server",
+    "version": "0.3.0",
     "private": true,
     "scripts": {
         "start": "nodemon server.js",
