--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -41,8 +41,9 @@ pipelines:
                       - echo "Your build and test goes here..."
                       - docker-compose up --exit-code-from cypress
                       - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-                      - docker build -t https://index.docker.io/v1/$DOCKER_HUB_USER/cnext:v0.2.1 .
-                      - docker push https://index.docker.io/v1/$DOCKER_HUB_USER/cnext:v0.2.1
+                      - docker info
+                      - docker build -t https://index.docker.io/v1/cycai/cnext:v0.2.1 .
+                      - docker push https://index.docker.io/v1/cycai/cnext:v0.2.1
                   services:
                       - docker
 
