update poetry docker

--- a/Dockerfile-poetry
+++ b/Dockerfile-poetry
@@ -1,15 +1,14 @@
-FROM python:3.9
+FROM python:3.9.12
 
 RUN mkdir /app
-
-COPY /cyc_next_app /app
-COPY pyproject.toml /app 
-
 WORKDIR /app
+
+COPY . .
+
 ENV PYTHONPATH=${PYTHONPATH}:${PWD}
 
 RUN pip3 install poetry
 RUN poetry config virtualenvs.create false
-# RUN poetry install --no-dev
-
-
+RUN poetry --version
+RUN poetry install --no-dev
+RUN poetry build
