--- a/cyc_next_app/package.json
+++ b/cyc_next_app/package.json
@@ -17,8 +17,8 @@
         "@codemirror/lint": "^0.19.2",
         "@codemirror/state": "^0.19.2",
         "@codemirror/theme-one-dark": "^0.19.0",
-        "@emotion/react": "^11.4.1",
-        "@emotion/styled": "^11.3.0",
+        "@emotion/react": "~11.4.1",
+        "@emotion/styled": "~11.3.0",
         "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
         "@jupyterlab/outputarea": "^3.3.2",
         "@jupyterlab/rendermime": "^3.3.2",
@@ -26,10 +26,11 @@
         "@lumino/coreutils": "^1.12.0",
         "@lumino/messaging": "^1.10.1",
         "@lumino/widgets": "^1.31.1",
-        "@mui/icons-material": "^5.0.1",
-        "@mui/lab": "^5.0.0-alpha.60",
-        "@mui/material": "^5.0.2",
-        "@mui/styles": "^5.0.1",
+        "@mui/icons-material": "~5.0.1",
+        "@mui/lab": "~5.0.0-alpha.60",
+        "@mui/material": "~5.0.2",
+        "@mui/styles": "~5.0.1",
+        "@mui/system": "~5.0.1",
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
         "@types/react-plotly.js": "^2.5.0",
@@ -41,7 +42,7 @@
         "html-react-parser": "^1.4.8",
         "inline-style-prefixer": "^4.0.0",
         "jquery-ui": "^1.13.1",
-        "material-ui": "^0.20.2",
+        "material-ui": "~0.20.2",
         "moment-timezone": "^0.5.34",
         "next": "11.1.2",
         "polished": "^4.1.3",
