--- a/cyc_next_app/server/environment.yml
+++ b/cyc_next_app/server/environment.yml
@@ -39,7 +39,7 @@ dependencies:
     - jupyter_core=4.9.1
     - jupyterlab_widgets=1.0.2
     - lazy-object-proxy=1.6.0
-    - libcxx=12.0.0
+    # - libcxx=12.0.0
     - libffi=3.3
     - libsodium=1.0.18
     - markupsafe=2.1.0
@@ -54,7 +54,7 @@ dependencies:
     - multipledispatch=0.6.0
     - nbconvert=5.6.1
     - nbformat=5.2.0
-    - ncurses=6.3
+    # - ncurses=6.3
     - nest-asyncio=1.5.1
     - notebook=5.7.11
     - numexpr=2.8.1
@@ -90,7 +90,7 @@ dependencies:
     - pytz=2021.3
     - pyyaml=6.0
     - pyzmq=22.3.0
-    - readline=8.1.2
+    # - readline=8.1.2
     - rope=0.22.0
     - send2trash=1.8.0
     - setuptools=58.0.4
