--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -3,13 +3,13 @@ p2n_comm:
     n2p_port: 5000
     p2n_port: 5001
 
-path_to_cycdataframe_lib: ''
+path_to_cycdataframe_lib: 'cycdataframe'
 
 projects:
     open_projects:
         - id: '1'
           name: 'Skywalker'
-          path: 'cnext_sample_projects/Skywalker'
+          path: 'G:\DEV\CycAI\cnext_sample_projects\Skywalker'
     active_project: '1'
     
 # p2n_comm:
