--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "cycai-cnext"
-version = "0.2.10"
+name = "cnext-test"
+version = "0.3.2"
 description = "improve your AI work follow"
 authors = ["cycai company"]
 license = "MIT"
@@ -19,7 +19,7 @@ cnext-path = "cyc_next_app.__main__:path"
 cnext-run = "cyc_next_app.__main__:start"
 
 [tool.poetry.dependencies]
-python = "3.9.12"
+python = "3.9.7"
 plotly = "5.7.0"
 simplejson = "3.17.6"
 requests = "2.27.1"
@@ -33,7 +33,7 @@ matplotlib = "3.5.1"
 pandas = "1.3.5"
 multipledispatch = "0.6.0"
 python-language-server = "0.36.2"
-cycdataframe = "^0.1.0"
+cnext-libs-test = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 
