--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cnext-test"
+name = "cnext"
 version = "0.3.0"
 description = "improve your AI work follow"
 authors = ["cycai company"]
@@ -33,7 +33,7 @@ matplotlib = "3.5.1"
 pandas = "1.3.5"
 multipledispatch = "0.6.0"
 python-language-server = "0.36.2"
-cnext-libs-test = "^0.1.0"
+cnext-libs = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 
