--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -9,7 +9,7 @@ projects:
     open_projects:
         - id: '1'
           name: 'Skywalker'
-          path: 'G:\DEV\CycAI\cnext_sample_projects\Skywalker'
+          path: 'cnext_sample_projects/Skywalker'
     active_project: '1'
     
 # p2n_comm:
