--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cnext"
-version = "0.3.2"
+version = "0.3.3"
 description = "improve your AI work follow"
 authors = ["cycai company"]
 license = "MIT"
@@ -34,6 +34,7 @@ pandas = "1.3.5"
 multipledispatch = "0.6.0"
 python-language-server = "0.36.2"
 cnext-libs = "^0.1.0"
+scikit-learn = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
