--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ pandas = "1.3.5"
 multipledispatch = "0.6.0"
 python-language-server = "0.36.2"
 cnext-libs = "^0.1.0"
+torch = "^1.11.0"
+torchvision = "^0.12.0"
+netron = "^5.7.6"
 
 [tool.poetry.dev-dependencies]
 
