--- a/cyc_next_app/server/Dockerfile-conda
+++ b/cyc_next_app/server/Dockerfile-conda
@@ -1,36 +1,30 @@
 FROM continuumio/anaconda3
 
-WORKDIR /app
-COPY . .
+WORKDIR /server
+COPY . /server
 
-ENV CLIENT_URL=http://localhost:3000
+ENV CLIENT_URL=http://web:3000
 
+# Create conda environment
+RUN conda env create -f environment.yml
 RUN conda install -c conda-forge nodejs
 RUN conda install -c conda-forge/label/gcc7 nodejs
 RUN conda install -c conda-forge/label/cf201901 nodejs
 RUN conda install -c conda-forge/label/cf202003 nodejs
 
-RUN npm -version
-RUN npm install node@16.14.2
-RUN npm install npm@8.5.0 
-
-WORKDIR /app/cyc_next_app
-RUN npm i --force
-ENV NODE_ENV=production
-ENV NEXT_PUBLIC_SERVER_SOCKET_ENDPOINT=http://localhost:4000
-RUN npm run build
-
-WORKDIR /app/cyc_next_app/server
-RUN npm i
-
 # Install git
 RUN conda install -c anaconda git
 RUN git clone -b v0.2.1 https://kiwing:QTmTLMdSUT3HPSEQpe7N@bitbucket.org/robotdreamers/cycdataframe.git ./cycdataframe
 RUN git clone https://kiwing:QTmTLMdSUT3HPSEQpe7N@bitbucket.org/robotdreamers/cnext_sample_projects.git
+# RUN git clone -b deploy --single-branch https://kiwing:QTmTLMdSUT3HPSEQpe7N@bitbucket.org/robotdreamers/cnext_sample_projects.git
+RUN npm install
 
-# Create conda environment
-RUN conda env create -f environment.yml
 # Activate conda environment
-WORKDIR /app
 ENV PATH /opt/conda/envs/py39/bin:$PATH
 RUN /bin/bash -c "source activate py39"
+# Run python script
+CMD ["npm", "start"]
+# Run python script 
+# CMD ["python", "test.py"]
+
+EXPOSE 4000
