--- a/cyc_next_app/server/pyproject.toml
+++ b/cyc_next_app/server/pyproject.toml
@@ -19,7 +19,7 @@ cnext-path = "cyc_next_app.__main__:path"
 cnext-run = "cyc_next_app.__main__:start"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
+python = ">=3.9"
 plotly = "^5.7.0"
 simplejson = "^3.17.6"
 requests = "^2.27.1"
@@ -28,7 +28,6 @@ zmq = "^0.0.0"
 send2trash = "^1.8.0"
 jupyter-client = "^7.2.2"
 jupyterlab = "^3.3.4"
-tensorflow = ">=2.6.0"
 matplotlib = "^3.5.1"
 pandas = "^1.3.5"
 multipledispatch = "^0.6.0"
