--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -1,9 +1,12 @@
 p2n_comm:
     host: tcp://127.0.0.1
-    n2p_port: 5000
-    p2n_port: 5001
+    port: 5000
 
-path_to_cycdataframe_lib: 'cycdataframe'
+n2p_comm:
+    host: tcp://127.0.0.1
+    kernel_control_port: 5005
+
+path_to_cnextlib: 'cycdataframe'
 
 projects:
     open_projects:
@@ -14,8 +17,11 @@ projects:
     
 # p2n_comm:
 #     host: tcp://127.0.0.1
-#     n2p_port: 5000
-#     p2n_port: 5001
+#     port: 5000
+
+# n2p_comm:
+#     host: tcp://127.0.0.1
+#     kernel_control_port: 5005
 
 # path_to_cycdataframe_lib: 'G:/DEV/CycAI/cycdataframe'
 
