--- a/cyc_next_app/server/pyproject.toml
+++ b/cyc_next_app/server/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cnext"
-version = "0.3.5"
+version = "0.3.6"
 description = "improve your AI work follow"
 authors = ["cycai company"]
 license = "MIT"
@@ -11,6 +11,15 @@ homepage = "https://cyc-ai.com/"
 
 packages = [
     { include = "cyc_next_app" },
+]
+
+exclude = [
+    "cyc_next_app/tsconfig.json",
+    "cyc_next_app/README.md",
+    "cyc_next_app/Dockerfile",
+    "cyc_next_app/Dockerfile-poetry",
+    "cyc_next_app/.dockerignore",
+    "cyc_next_app/server/Dockerfile",
 ]
 
 [tool.poetry.scripts]
@@ -32,7 +41,7 @@ matplotlib = "^3.5.1"
 pandas = "^1.3.5"
 multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
-cnextlib = "^0.2.0"
+cnextlib = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 
