--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cnext"
-version = "0.3.6"
+version = "0.3.8"
 description = "improve your AI work follow"
 authors = ["cycai company"]
 license = "MIT"
@@ -38,7 +38,7 @@ send2trash = "^1.8.0"
 jupyter-client = "^7.2.2"
 jupyterlab = "^3.3.4"
 matplotlib = "^3.5.1"
-pandas = "^1.3.5"
+pandas = "1.3.5"
 multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
 cnextlib = "^0.2.0"
