--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cnext"
-version = "0.3.8"
+version = "0.3.9"
 description = "improve your AI work follow"
 authors = ["cycai company"]
 license = "MIT"
@@ -42,6 +42,7 @@ pandas = "1.3.5"
 multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
 cnextlib = "^0.2.0"
+netron = "^5.7.6"
 
 [tool.poetry.dev-dependencies]
 
