--- a/cyc_next_app/server/.server.yaml
+++ b/cyc_next_app/server/.server.yaml
@@ -23,7 +23,7 @@ projects:
 #     host: tcp://127.0.0.1
 #     kernel_control_port: 5005
 
-# path_to_cycdataframe_lib: 'G:/DEV/CycAI/cycdataframe'
+# path_to_cnextlib: 'G:/DEV/CycAI/cycdataframe'
 
 # projects:
 #     open_projects:
