--- a/cyc_next_app/server/pyproject.toml
+++ b/cyc_next_app/server/pyproject.toml
@@ -20,6 +20,7 @@ matplotlib = "^3.5.1"
 pandas = "1.3.5"
 multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
+netron = "^5.7.6"
 cnextlib = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
